Bug 300732 - [ffmpegthumbs] Fails to build with ffmpeg 0.11
Summary: [ffmpegthumbs] Fails to build with ffmpeg 0.11
Status: RESOLVED FIXED
Alias: None
Product: kdemultimedia
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Multimedia Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-27 22:43 UTC by Christoph Feck
Modified: 2012-05-31 18:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Proposed patch (820 bytes, patch)
2012-05-27 22:43 UTC, Christoph Feck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2012-05-27 22:43:03 UTC
Created attachment 71401 [details]
Proposed patch

Two deprecated calls have been removed from ffmpeg 0.11.
Comment 1 Torrie Fischer 2012-05-29 13:53:40 UTC
Git commit 4f03b20614c122e3e14473d42a000c0bffdce39c by Trever Fischer, on behalf of Christoph Feck.
Committed on 29/05/2012 at 15:53.
Pushed by tdfischer into branch 'master'.

Two deprecated calls have been removed from ffmpeg 0.11.

M  +1    -2    ffmpegthumbnailer/moviedecoder.cpp

http://commits.kde.org/ffmpegthumbs/4f03b20614c122e3e14473d42a000c0bffdce39c