Two deprecated calls have been removed from ffmpeg 0.11.

BUG:300732